fixed more spacing

--- a/src/styles/layout.module.css
+++ b/src/styles/layout.module.css
@@ -20,7 +20,7 @@
 a {
   display: block;
   margin-top: 1rem;
-  padding-right: 8px;
+  padding-right: 32px;
   color: #7798ff;
   text-decoration: none;
   font-size: 1.5rem;
